tmp/MGprogrammingParser.py
# Generated from tmp/MGprogramming.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MGprogrammingParser ( Parser ):

    grammarFileName = "MGprogramming.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'todorhoiloh'", "'+'", "'-'", 
                     "'*'", "':'", "'^'", "'|'", "'>'", "'<'", "'>='", "'<='", 
                     "'='", "'=/='", "'\\n'", "'ehleh'", "'duusgah'", "'angi'", 
                     "'ehleh_angi'", "'duusgah_angi'", "'ehleh_davtalt'", 
                     "'duusgah_davtalt'", "'zuur'", "'urgeljleh'", "'zavsar'", 
                     "'d'", "'aas'", "'tuld'", "'nii tuld'", "'hervee'", 
                     "'ner'", "'butsah'", "'hevleh'", "'orolt'", "'buhel'", 
                     "'urt'", "'butarhai'", "'ih_butarhai'", "'temdegt'", 
                     "'mor'", "'tiim_ugui'", "'jagsaalt'", "'bagts'", "'buleg'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ASSIGN_VALUE", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDE", "POWER", "MODULO", 
                      "GREATER_THAN", "LESSER_THAN", "GREATER_OR_EQUAL", 
                      "LESSER_OR_EQUAL", "EQUAL", "NOT_EQUAL", "NEW_LINE", 
                      "START_FUNCTION", "END_FUNCTION", "CLASS_DEF", "START_CLASS", 
                      "END_CLASS", "START_LOOP", "END_LOOP", "WHILE", "CONTINUE", 
                      "BREAK", "FOR", "FOR_FROM", "FOR_TO", "FOR_JUMP", 
                      "IF", "FUNCT_NAME", "RETURN", "PRINT", "INPUT", "INT", 
                      "LONG", "FLOAT", "DOUBLE", "CHAR", "STRING", "BOOLEAN", 
                      "LIST", "SET", "DICT", "COMMENT", "START_LONG_COMMENT", 
                      "NUMBER", "VARIABLE", "STRING_LITERAL", "OPEN_BRACKET", 
                      "CLOSE_BRACKET", "OPEN_LIST_BRACKET", "CLOSE_LIST_BRACKET", 
                      "DICT_OPEN_BRACKET", "DICT_CLOSE_BRACKET", "WS" ]

    RULE_program = 0
    RULE_var_type = 1
    RULE_statement = 2
    RULE_class_def = 3
    RULE_function_def = 4
    RULE_args = 5
    RULE_function_body = 6
    RULE_value = 7
    RULE_assign = 8
    RULE_print = 9
    RULE_for_loop = 10
    RULE_if_stmt = 11
    RULE_while_loop = 12
    RULE_loop_body = 13
    RULE_return_stmt = 14
    RULE_function_call = 15
    RULE_array = 16
    RULE_table = 17
    RULE_dictionary = 18

    ruleNames =  [ "program", "var_type", "statement", "class_def", "function_def", 
                   "args", "function_body", "value", "assign", "print", 
                   "for_loop", "if_stmt", "while_loop", "loop_body", "return_stmt", 
                   "function_call", "array", "table", "dictionary" ]

    EOF = Token.EOF
    T__0=1
    ASSIGN_VALUE=2
    PLUS=3
    MINUS=4
    MULTIPLY=5
    DIVIDE=6
    POWER=7
    MODULO=8
    GREATER_THAN=9
    LESSER_THAN=10
    GREATER_OR_EQUAL=11
    LESSER_OR_EQUAL=12
    EQUAL=13
    NOT_EQUAL=14
    NEW_LINE=15
    START_FUNCTION=16
    END_FUNCTION=17
    CLASS_DEF=18
    START_CLASS=19
    END_CLASS=20
    START_LOOP=21
    END_LOOP=22
    WHILE=23
    CONTINUE=24
    BREAK=25
    FOR=26
    FOR_FROM=27
    FOR_TO=28
    FOR_JUMP=29
    IF=30
    FUNCT_NAME=31
    RETURN=32
    PRINT=33
    INPUT=34
    INT=35
    LONG=36
    FLOAT=37
    DOUBLE=38
    CHAR=39
    STRING=40
    BOOLEAN=41
    LIST=42
    SET=43
    DICT=44
    COMMENT=45
    START_LONG_COMMENT=46
    NUMBER=47
    VARIABLE=48
    STRING_LITERAL=49
    OPEN_BRACKET=50
    CLOSE_BRACKET=51
    OPEN_LIST_BRACKET=52
    CLOSE_LIST_BRACKET=53
    DICT_OPEN_BRACKET=54
    DICT_CLOSE_BRACKET=55
    WS=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MGprogrammingParser.EOF, 0)

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Class_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Class_defContext,i)


        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_defContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.StatementContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.StatementContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MGprogrammingParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 38
                    self.class_def()
                    pass

                elif la_ == 2:
                    self.state = 39
                    self.function_def()
                    pass

                elif la_ == 3:
                    self.state = 40
                    self.statement()
                    pass


                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 35166194237440) != 0)):
                    break

            self.state = 45
            self.match(MGprogrammingParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MGprogrammingParser.INT, 0)

        def LONG(self):
            return self.getToken(MGprogrammingParser.LONG, 0)

        def FLOAT(self):
            return self.getToken(MGprogrammingParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(MGprogrammingParser.DOUBLE, 0)

        def CHAR(self):
            return self.getToken(MGprogrammingParser.CHAR, 0)

        def STRING(self):
            return self.getToken(MGprogrammingParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MGprogrammingParser.BOOLEAN, 0)

        def LIST(self):
            return self.getToken(MGprogrammingParser.LIST, 0)

        def SET(self):
            return self.getToken(MGprogrammingParser.SET, 0)

        def DICT(self):
            return self.getToken(MGprogrammingParser.DICT, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = MGprogrammingParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 35150012350464) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(MGprogrammingParser.AssignContext,0)


        def print_(self):
            return self.getTypedRuleContext(MGprogrammingParser.PrintContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MGprogrammingParser.For_loopContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MGprogrammingParser.If_stmtContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(MGprogrammingParser.While_loopContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MGprogrammingParser.Return_stmtContext,0)


        def function_call(self):
            return self.getTypedRuleContext(MGprogrammingParser.Function_callContext,0)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MGprogrammingParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35, 36, 37, 38, 39, 40, 41, 42, 43, 44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.assign()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.print_()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.for_loop()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.if_stmt()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.while_loop()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.return_stmt()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.function_call()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_DEF(self):
            return self.getToken(MGprogrammingParser.CLASS_DEF, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def START_CLASS(self):
            return self.getToken(MGprogrammingParser.START_CLASS, 0)

        def END_CLASS(self):
            return self.getToken(MGprogrammingParser.END_CLASS, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_defContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.StatementContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.StatementContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)




    def class_def(self):

        localctx = MGprogrammingParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(MGprogrammingParser.CLASS_DEF)
            self.state = 59
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 60
            self.match(MGprogrammingParser.START_CLASS)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35166193975296) != 0):
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 61
                    self.function_def()
                    pass

                elif la_ == 2:
                    self.state = 62
                    self.statement()
                    pass


                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(MGprogrammingParser.END_CLASS)
            self.state = 69
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCT_NAME(self):
            return self.getToken(MGprogrammingParser.FUNCT_NAME, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def START_FUNCTION(self):
            return self.getToken(MGprogrammingParser.START_FUNCTION, 0)

        def function_body(self):
            return self.getTypedRuleContext(MGprogrammingParser.Function_bodyContext,0)


        def END_FUNCTION(self):
            return self.getToken(MGprogrammingParser.END_FUNCTION, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def args(self):
            return self.getTypedRuleContext(MGprogrammingParser.ArgsContext,0)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)




    def function_def(self):

        localctx = MGprogrammingParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MGprogrammingParser.FUNCT_NAME)
            self.state = 72
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 73
            self.match(MGprogrammingParser.OPEN_BRACKET)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 35150012350464) != 0):
                self.state = 74
                self.args()


            self.state = 77
            self.match(MGprogrammingParser.CLOSE_BRACKET)
            self.state = 78
            self.match(MGprogrammingParser.START_FUNCTION)
            self.state = 79
            self.function_body()
            self.state = 80
            self.match(MGprogrammingParser.END_FUNCTION)
            self.state = 81
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Var_typeContext,i)


        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.VARIABLE)
            else:
                return self.getToken(MGprogrammingParser.VARIABLE, i)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = MGprogrammingParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.var_type()
            self.state = 84
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 85
                self.match(MGprogrammingParser.T__0)
                self.state = 86
                self.var_type()
                self.state = 87
                self.match(MGprogrammingParser.VARIABLE)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.AssignContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.AssignContext,i)


        def for_loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.For_loopContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.For_loopContext,i)


        def if_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.If_stmtContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.If_stmtContext,i)


        def while_loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.While_loopContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.While_loopContext,i)


        def return_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Return_stmtContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Return_stmtContext,i)


        def function_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_callContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_callContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = MGprogrammingParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 100
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35, 36, 37, 38, 39, 40, 41, 42, 43, 44]:
                    self.state = 94
                    self.assign()
                    pass
                elif token in [26]:
                    self.state = 95
                    self.for_loop()
                    pass
                elif token in [30]:
                    self.state = 96
                    self.if_stmt()
                    pass
                elif token in [23]:
                    self.state = 97
                    self.while_loop()
                    pass
                elif token in [32]:
                    self.state = 98
                    self.return_stmt()
                    pass
                elif token in [31]:
                    self.state = 99
                    self.function_call()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 35157604040704) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def NUMBER(self):
            return self.getToken(MGprogrammingParser.NUMBER, 0)

        def STRING_LITERAL(self):
            return self.getToken(MGprogrammingParser.STRING_LITERAL, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = MGprogrammingParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MGprogrammingParser.VARIABLE)
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MGprogrammingParser.NUMBER)
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(MGprogrammingParser.STRING_LITERAL)
                self.state = 107
                self.match(MGprogrammingParser.NEW_LINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(MGprogrammingParser.Var_typeContext,0)


        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def ASSIGN_VALUE(self):
            return self.getToken(MGprogrammingParser.ASSIGN_VALUE, 0)

        def value(self):
            return self.getTypedRuleContext(MGprogrammingParser.ValueContext,0)


        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = MGprogrammingParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.var_type()
            self.state = 111
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 112
            self.match(MGprogrammingParser.ASSIGN_VALUE)
            self.state = 113
            self.value()
            self.state = 114
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MGprogrammingParser.PRINT, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def value(self):
            return self.getTypedRuleContext(MGprogrammingParser.ValueContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print_(self):

        localctx = MGprogrammingParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MGprogrammingParser.PRINT)
            self.state = 117
            self.match(MGprogrammingParser.OPEN_BRACKET)
            self.state = 118
            self.value()
            self.state = 119
            self.match(MGprogrammingParser.CLOSE_BRACKET)
            self.state = 120
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MGprogrammingParser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def FOR_FROM(self):
            return self.getToken(MGprogrammingParser.FOR_FROM, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.NUMBER)
            else:
                return self.getToken(MGprogrammingParser.NUMBER, i)

        def FOR_TO(self):
            return self.getToken(MGprogrammingParser.FOR_TO, 0)

        def FOR_JUMP(self):
            return self.getToken(MGprogrammingParser.FOR_JUMP, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def loop_body(self):
            return self.getTypedRuleContext(MGprogrammingParser.Loop_bodyContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_for_loop
